<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lifehack</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">Lifehack</string>
    <string name="title_activity_name">Welcome to Lifehack</string>
    <string name="title_activity_main">Lifehack Info</string>
    <string name="title_activity_quiz">Lifehack Quiz</string>
    <string name="title_activity_summary">Lifehack Summary</string>

    <string name="title_drink">How to cool your drink</string>
    <string name="title_text1">Wrap in a wet towel...</string>
    <string name="title_text2">Use a \"socks\"\noption in a hike</string>
    <string name="title_text3">To impress your friends...</string>
    <string name="title_text4">Many drinks?</string>
    <string name="title_text5">Have fun...</string>
    <string name="text1">or wet a newspaper and wrap the bottle. Put it in the freezer for 5-6 minutes. That\'s all, now you don\'t need to drink warm swill.</string>
    <string name="text2">Wet your sock, put your bottle inside of the sock and hang it on a tree. Wind will pull the warm from the bottle. The main thing - to take spare socks.</string>
    <string name="text3">You will need a deep container, water, ice, and salt. Add  the same amount of ice in the water, handful of the salt and put a drink bottle inside. Gently mix. Bottle will cool down for two minutes, and your friends will be impressed by this trick.</string>
    <string name="text4">There is an alternative to ice bath at the forest. This is a small pit near a pond. You need to wrap a drink in a cloth or bag, wet it and dig it into the ground. Not so fast, but holds a cold longer :)</string>
    <string name="text5">Do you see extinguisher? You should blow on your drink - the bottle will be icy in two minutes, and then you wash the floor, walls, bottle. You will have problems with management and firefighters... But we are having fun :)</string>

    <string name="sb_cont_to_quiz">Continue to quiz</string>
    <string name="sb_continue">Continue</string>

    <string name="name_hint">Enter your name</string>

    <string name="title_quest1">Question №1</string>
    <string name="title_quest2">Question №2</string>
    <string name="title_quest3">Question №3</string>

    <string name="quest1">What is the name of the newspaper, in which the bottle was wrapped?</string>
    <string name="quest2">What are the ingredients used for the cooling method \"To impress your friends...\"?</string>
    <string name="quest3">Will you have a problem, if you use the last method of cooling?</string>

    <string name="check_quest1">Salt</string>
    <string name="check_quest2">Pepper</string>
    <string name="check_quest3">Ice</string>

    <string name="radio_quest1">Yes</string>
    <string name="radio_quest2">No</string>

    <string name="quest1_hint">Your answer</string>

    <string name="congrat">Congratulations!</string>
    <string name="congrat_name">"Congratulations, %s!"</string>
    <string name="your_score">"Your score is: %d/5"</string>
</resources>