<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.lifehack.Main2Activity">

        <TextView
            style="@style/QuizTitleTextStyle"
            android:text="@string/title_quest1" />

        <TextView
            style="@style/QuizTextStyle"
            android:text="@string/quest1" />

        <EditText
            android:id="@+id/answer1_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:hint="@string/quest1_hint"
            android:inputType="textMultiLine"
            android:textSize="16sp" />

        <View style="@style/LineSepStyle" />

        <TextView
            style="@style/QuizTitleTextStyle"
            android:text="@string/title_quest2" />

        <TextView
            style="@style/QuizTextStyle"
            android:text="@string/quest2" />

        <CheckBox
            android:id="@+id/check_ans1"
            style="@style/CheckboxStyle"
            android:text="@string/check_quest1" />

        <CheckBox
            android:id="@+id/check_ans2"
            style="@style/CheckboxStyle"
            android:text="@string/check_quest2" />

        <CheckBox
            android:id="@+id/check_ans3"
            style="@style/CheckboxStyle"
            android:text="@string/check_quest3" />

        <View style="@style/LineSepStyle" />

        <TextView
            style="@style/QuizTitleTextStyle"
            android:text="@string/title_quest3" />

        <TextView
            style="@style/QuizTextStyle"
            android:text="@string/quest3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yes_radio_button"
                style="@style/RadioStyle"
                android:text="@string/radio_quest1" />

            <RadioButton
                android:id="@+id/no_radio_button"
                style="@style/RadioStyle"
                android:text="@string/radio_quest2" />
        </RadioGroup>

        <View style="@style/LineSepStyle" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="sbContToSum"
            android:text="@string/sb_continue" />


    </LinearLayout>
</ScrollView>